--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "pricing-proxy",
+  "version": "1.0.0",
+  "description": "proxy service",
+  "author": "cory",
   "license": "",
   "engines": {
     "node": ">=6.13.0"
   },
   "scripts": {
-  },
-  "dependencies": {
+    "dev": "webpack -d -w",
+    "start:server": "nodemon server/server.js"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "axios": "^0.19.2",
+    "babel-loader": "^8.0.4",
+    "body-parser": "^1.19.0",
+    "css-loader": "^2.1.1",
+    "express": "^4.15.0",
+    "html-loader": "^0.5.5",
+    "jquery": "^3.1.1",
+    "mysql": "^2.13.0",
+    "react-hot-loader": "^4.3.11",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "nodemon": "^2.0.3",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0"
   }
 }
+
