--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "pricing-proxy",
+  "name": "betterboiler",
   "version": "1.0.0",
-  "description": "proxy service",
-  "author": "cory",
-  "license": "",
-  "engines": {
-    "node": ">=6.13.0"
-  },
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "dev": "webpack -d -w",
     "start:server": "nodemon server/server.js"
   },
+  "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
@@ -35,4 +32,3 @@
     "react-dom": "^16.6.0"
   }
 }
-
