--- a/proxy/package.json
+++ b/proxy/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack -d -w",
-    "start:server": "nodemon server/server.js"
+    "start:server": "nodemon server.js"
   },
   "license": "ISC",
   "devDependencies": {
